<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.josue.proyectox.LoginActivity"
    android:background="@drawable/cimarron_v2">

    <!--<android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        android:src="@android:drawable/ic_menu_sort_by_size"
        android:id="@+id/floatingActionButton"
        app:backgroundTint="@color/verdeCimarron"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />-->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPassword"
        android:hint="Contraseña"
        android:fontFamily="casual"
        android:textColorHighlight="@android:color/background_dark"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/black"
        android:layout_marginBottom="39dp"
        android:layout_above="@+id/material_design_android_floating_action_menu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etUsername"
        android:hint="@string/text_hint_login_username"
        tools:textColorLink="@android:color/darker_gray"
        android:textColorLink="@color/colorPrimaryDark"
        android:fontFamily="casual"
        android:textColorHighlight="@android:color/background_dark"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/black"
        tools:textStyle="italic"
        android:layout_above="@+id/etPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/material_design_android_floating_action_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fab:menu_animationDelayPerItem="55"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="@color/verdeCimarron"
        fab:menu_colorPressed="#dc4b3f"
        fab:menu_colorRipple="@color/verdeCimarron"
        fab:menu_fab_label=""
        fab:menu_fab_size="normal"
        fab:menu_icon="@android:drawable/ic_menu_sort_by_size"
        fab:menu_labels_colorNormal="#333"
        fab:menu_labels_colorPressed="#444"
        fab:menu_labels_colorRipple="#66efecec"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="#f2f1f1"
        fab:menu_labels_textSize="15sp"
        fab:menu_openDirection="up"
        fab:menu_shadowColor="#66aff198"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="4dp"
        fab:menu_showShadow="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/material_design_floating_action_menu_item1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/verdeCimarron"
            fab:fab_label="@string/floatingButton_link_1"
            fab:fab_size="mini" />
            <!--android:src="@drawable/ic_horarios"-->


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/material_design_floating_action_menu_item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/verdeCimarron"
            fab:fab_label="@string/floatingButton_link_2"
            fab:fab_size="mini"/>
            <!--android:src="@drawable/ic_maestros"-->

    </com.github.clans.fab.FloatingActionMenu>


    <Button
        android:text="@string/text_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bLogin"
        android:textColor="?attr/colorBackgroundFloating"
        android:background="@color/verdeCimarron"
        android:fontFamily="casual"
        tools:textStyle="italic"
        android:layout_below="@+id/etPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/material_design_android_floating_action_menu"
        android:layout_toStartOf="@+id/material_design_android_floating_action_menu" />

    <TextView
        android:text="@string/text_login_2"
        android:textSize="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvRegisterHere"
        android:layout_below="@+id/bLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp" />


</RelativeLayout>
